@@ -28,6 +28,7 @@
 #define CSSC__SEQSTATE_H__
 
 #include "stack.h"
+#include "delta.h"
 
 class cssc_delta_table;
 
